# Streamlit_app

./: pyproject.toml
.devcontainer/: devcontainer.json
src/streamlit_app/: main.py  main1.py  script.py  script1.py
